--- a/htmlFile/indexed.html
+++ b/htmlFile/indexed.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="head">
+    <header class="head">0
         <nav class="navbar">
             <ul class="unolist1 ">
                 <li class="listholder"><a href="#">Home</a></li>
@@ -74,68 +74,68 @@
                 <h1 class="skill"> <i class="fa-solid fa-chalkboard-user"></i>SKILLS</h1>
             </div>
             <div class="holder">
-                <div id="html" class="container" data-bar-width="85">
-                    <div class="inner1">
+                <div id="html" class="container" >
+                    <div class="inner1" data-bar-width="85">
                         <h2>HTML</h2>
                     </div>
 
                 </div>
-                <div id="css" class="container" data-bar-width="80">
-                    <div class="inner2">
+                <div id="css" class="container" >
+                    <div class="inner2" data-bar-width="80">
                         <h2>CSS</h2>
                     </div>
 
                 </div>
-                <div id="javascript" class="container" data-bar-width="70">
-                    <div class="inner3">
+                <div id="javascript" class="container" >
+                    <div class="inner3" data-bar-width="70">
                         <h2>JAVASCRIPT</h2>
                     </div>
 
                 </div>
-                <div id="react" class="container" data-bar-width="80">
-                    <div class="inner4">
+                <div id="react" class="container" >
+                    <div class="inner4" data-bar-width="80">
                         <h2>ReactJS</h2>
                     </div>
 
                 </div>
-                <div id="node" class="container" data-bar-width="70">
-                    <div class="inner5">
+                <div id="node" class="container" >
+                    <div class="inner5" data-bar-width="70">
                         <h2>NodeJS</h2>
                     </div>
 
                 </div>
-                <div id="mongo" class="container" data-bar-width="65">
-                    <div class="inner6">
+                <div id="mongo" class="container" >
+                    <div class="inner6" data-bar-width="65">
                         <h2>MongoDB</h2>
                     </div>
 
                 </div>
-                <div id="express" class="container" data-bar-width="70">
-                    <div class="inner7">
+                <div id="express" class="container" >
+                    <div class="inner7" data-bar-width="70">
                         <h2>ExpressJS</h2>
                     </div>
 
                 </div>
-                <div id="c" class="container" data-bar-width="70">
-                    <div class="inner8">
+                <div id="c" class="container" >
+                    <div class="inner8" data-bar-width="70">
                         <h2>C</h2>
                     </div>
 
                 </div>
-                <div id="cpp" class="container" data-bar-width="85">
-                    <div class="inner9">
+                <div id="cpp" class="container" >
+                    <div class="inner9" data-bar-width="85">
                         <h2>C++</h2>
                     </div>
 
                 </div>
-                <div id="java" class="container" data-bar-width="50">
-                    <div class="inner10">
+                <div id="java" class="container" >
+                    <div class="inner10" data-bar-width="50">
                         <h2>JAVA</h2>
                     </div>
 
                 </div>
-                <div id="dsa" class="container" data-bar-width="85">
-                    <div class="inner11">
+                <div id="dsa" class="container" >
+                    <div class="inner11" data-bar-width="85">
                         <h2>DSA</h2>
                     </div>
 
