--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Resume</title>
     <link rel="stylesheet" href="https://kit.fontawesome.com/a4798bd058.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a4798bd058.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../cssFile/indexed.css">
+    <link rel="stylesheet" href="cssFile/indexed.css">
 </head>
 
 <body>
@@ -235,7 +235,7 @@
     
     <div class="copy">&copy; www.shivammt.com</div>
 
-    <script src="../jsFile/indexed.js"></script>
+    <script src="/jsFile/indexed.js"></script>
 </body>
 
 </html>
