--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main class="mainn">
         <section id="about" class="sec">
-            <img src="../imageFile/logoImage/logoOfMine.jpg" alt="">
+            <img src="/imageFile/logoImage/logoOfMine.jpg" alt="">
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quis nesciunt qui dicta totam deserunt
                 adipisci o jgc jfkdfhugfjszbdffacilis eligendi, voluptas commodi incidunt cumque sapiente dolorum
